--- a/serverless.yml
+++ b/serverless.yml
@@ -50,12 +50,15 @@ package:
    - ./**
  include:
    - ./bin/**
+   - ./public/**
 
 functions:
   hello:
     handler: bin/hello
   world:
     handler: bin/world
+  links:
+    handler: bin/links
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
