--- a/serverless.yml
+++ b/serverless.yml
@@ -49,7 +49,7 @@ provider:
 #    variable1: value1
 
 plugins:
-  serverless-aws-documentation
+  - serverless-aws-documentation
 
 custom:
   documentation:
